# tinypng-cli

./: .gitignore  Makefile  README.md  build.sh  build_executable.py  build_windows.py  pyproject.toml  requirements.txt  tinypng_cli.py  version.py
.github/workflows/: build.yml
